# snomed-characterization

./: .gitignore  Makefile  README.md  analysis_concepts.ipynb  analysis_roaring_bitmap.ipynb  benchmark.py  hello.py  pyproject.toml  snomed_concept.py  snomed_concept_test.py
data/vocabulary/: VOCABULARY.csv
snomed_characterization/: adjacency_graph.py  condition_cluster_analyzer.py  snomed_cluster_visualizer.py  snomed_concept.py  snomed_graph.py
snomed_characterization/duckdb/: queries.py
snomed_characterization/graphs/: abstract_graph.py  bitmap_graph.py  snomed_complete_graph.py  snomed_complete_graph_builder.py  snomed_graph_builder.py
snomed_characterization/services/: import_duckdb_concepts_base.py  import_duckdb_concepts_to_bitmap_graph.py  import_duckdb_concepts_to_snomed_complete_graph.py  import_duckdb_concepts_to_snomed_graph.py  import_nx_graph_into_neo4j.py  load_snomed_concepts_from_duckdb.py
tests/: test_snomed_concept.py  test_snomed_graph.py
tests/graphs/: test_snomed_graph_builder.py
tests/services/: test_import_duckdb_concepts_to_snomed_graph.py  test_import_duckdb_concepts_to_snomed_graph_builder.py
