[project]
name = "snomed-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.1.3",
    "ipython>=8.31.0",
    "neo4j>=5.27.0",
    "networkx>=3.4.2",
    "nose2>=0.15.1",
    "pandas>=2.2.3",
    "pyroaring>=1.0.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
